--- a/demo/package.json
+++ b/demo/package.json
@@ -19,6 +19,7 @@
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
+    "lodash": "^4.13.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
